--- a/index.html
+++ b/index.html
@@ -1,225 +1,163 @@
 <!DOCTYPE HTML>
-<!--
-	Editorial by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
-	<head>
-		<title>Portfólio de Ciência de Dados</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
-	<body class="is-preload">
+  <head>
+    <title>Portfólio de Ciência de Dados</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+  </head>
+  <body class="is-preload">
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+    <!-- Wrapper -->
+    <div id="wrapper">
 
-				<!-- Main -->
-					<div id="main">
-						<div class="inner">
+      <!-- Main -->
+      <div id="main">
+        <div class="inner">
 
-							<!-- Header -->
-								<header id="header">
-									<a href="index.html" class="logo"><strong>Portfólio</strong> de Ciência de Dados</a>
-									<ul class="icons">
-										<li><a href="#" class="icon brands fa-linkedin"><span class="www.linkedin.com/in/claython-cardoso-540878150"</span></a></li>
-										<li><a href="#" class="icon solid fa-envelope"><span class="Claython.fabiano@hotmail.com"</span></a></li>
-									</ul>
-								</header>
+          <!-- Header -->
+          <header id="header">
+            <a href="index.html" class="logo"><strong>Portfólio</strong> de Ciência de Dados</a>
+            <ul class="icons">
+              <li><a href="https://www.linkedin.com/in/claython-cardoso-540878150" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
+              <li><a href="mailto:Claython.fabiano@hotmail.com" class="icon solid fa-envelope"><span class="label">E-mail</span></a></li>
+            </ul>
+          </header>
 
-							<!-- Banner -->
-								<section id="banner">
-									<div class="content">
-										<header>
-											<h1>Olá, seja muito bem-vindo (a) ao meu portfólio de<br /> projetos de Ciência de Dados.</h1>
-										</header>
-										<p>Nessa página, demonstro minhas habilidades de resolver problemas de negócio
-utilizando conceitos e ferramentas da Ciência de Dados, através de projetos com dados
-públicos.<br />
-										Você vai encontrar, também, minhas experiências profissionais, habilidades,
-ferramentas e conceitos envolvendo a Ciência de Dados. <br />Sinta-se à vontade para entrar em contato através dos links no final da página.</p>
-									</div>
-									<span class="image object">
-										<img src="images/pic12.jpg" alt="" />
-									</span>
-								</section>
+          <!-- Banner -->
+          <section id="banner">
+            <div class="content">
+              <header>
+                <h1>Olá! Seja bem-vindo ao meu portfólio de<br /> projetos em Ciência de Dados.</h1>
+              </header>
+              <p>Sou <strong>Claython Cardoso</strong>, Analista Sênior de Inteligência de Mercado com sólida atuação no setor logístico-portuário.  
+              Tenho experiência em transformar dados em decisões estratégicas por meio de análise preditiva, visualização de dados, modelos estatísticos e indicadores de desempenho.</p>
+              <p>Este portfólio apresenta alguns projetos desenvolvidos com dados públicos e desafios reais, onde aplico técnicas de machine learning, estatística, SQL, Power BI e Python para resolver problemas de negócio de forma prática e escalável.</p>
+            </div>
+            <span class="image object">
+              <img src="images/pic12.jpg" alt="Dashboard" />
+            </span>
+          </section>
 
-								<!-- Content -->
-									<section>
-										<header class="main">
-											<h1>Sobre Mim</h1>
-										</header>
+          <!-- Sobre Mim -->
+          <section>
+            <header class="main">
+              <h1>Sobre Mim</h1>
+            </header>
+            <h2>Analista Sênior de Inteligência de Mercado na DP World Santos</h2>
+            <p>Graduado em Engenharia de Produção e Matemática, com MBA em Tecnologia para Negócios. Atualmente, atuo com inteligência de mercado na área de Pricing e Estratégia Comercial em uma das maiores operadoras portuárias do Brasil.</p>
+            <p>Minhas responsabilidades incluem:</p>
+            <ul>
+              <li>Construção e automação de dashboards em Power BI para suporte à tomada de decisão.</li>
+              <li>Análise e modelagem de dados para estruturação de indicadores operacionais e comerciais.</li>
+              <li>Estudos de pricing com base em dados históricos, concorrência e projeções de demanda.</li>
+              <li>Aplicação de técnicas quantitativas para entender tendências, sazonalidades e padrões de comportamento.</li>
+            </ul>
+            <p>Busco aplicar a Ciência de Dados de forma prática e acessível, sempre com foco em geração de valor ao negócio.</p>
+          </section>
 
-										<!-- Content -->
-											<h2 id="content">Meu nome é Claython Cardoso, sou formado em Engenharia de Produção, Matemática e possuo MBA em Tecnologia para Negócios. Trabalho como
-Analista de Indicadores e Orçamentos no setor de Pessoas.</h2>
-											<p>Atualmente exerço as seguintes Atividades:</p>
-											<p>Implementar e apoiar a atualização e publicação de indicadores, incluindo painéis
-de monitoração e controle.
-Apoiar a correlação de indicadores e a sua análise para detectar tendências e possíveis criticidades, sinalizando pontos de atenção.
-Assistir aos gestores de áreas e donos de processos na definição de indicadores/relatórios e na sua geração para apoiar a gestão do desempenho.
-Extrair e analisar relatórios de acordo com as rotinas do departamento e as ferramentas disponíveis, visando disponibilizar informações relevantes dos processos de recursos humanos.
-Apoiar na elaboração do orçamento anual, através de análise e extração de dados de todas as áreas.
-Executar atividades relacionadas com o cargo de acordo com as necessidades da área, observando as obrigações de capacitação, habilitação e autorização para a realização de atividades especificas, buscando assegurar a promoção do foco no cliente e na organização.
-Atuar para que seja mantida a integridade dos sistemas de gestão quando forem planejadas e implementadas as mudanças.
-Atuar para que os processos entreguem suas saídas pretendidas, conforme os requisitos das normas, relatando o desempenho dos sistemas de gestão e as oportunidades de melhoria em particular à direção.
-Cumprir as normas, procedimentos e requisitos da empresa no tocante aos Sistemas de Gestão, considerando: Gestão Socioambiental, Gestão Segurança Empresarial, Qualidade, Gestão de Saúde e Segurança do trabalho.</p>
-											<p>Estou buscando uma oportunidade de trabalhar profissionalmente como Cientista de Dados para melhorar a tomada de decisão da empresa, através da construção de soluções usando dados.</p>
-										</section>
-							<!-- Section -->
-								<section>
-									<header class="major">
-										<h2>Habilidades</h2>
-									</header>
-									<div class="features">
-										<article>
-											<span class="icon fa-gem"></span>
-											<div class="content">
-												<h3>Linguagens de Programação e Banco de Dados</h3>
-												<ul>
-												<li>Python com foco em análise de dados.</li>
-												<li>Web scraping com Python.</li>
-												<li>SQL para extração de dados.</li>
-												<li>R para modelagem estatística.</li>
-												<li>Banco de Dados SQLite, Postres, MySQL, Oracle, MongoDB e Cassandra.</li>
-											  </ul>
-											</div>
-										</article>
-										<article>
-											<span class="icon solid fa-paper-plane"></span>
-											<div class="content">
-												<h3>Estatística e Machine Learning</h3>
-												<ul>
-													<li>Estatística descritiva (localização, dispersão, assimetria, kurtosis, densidade)
-</li>
-													<li>Algoritmos de Regressão, classificação, clusterização e "learn to rank".</li>
-													<li>Técnicas de balanceamento dos dados, seleção de atributos e redução de
-dimensionalidade.</li>
-													<li>Métricas de performance dos algoritmos ( RMSE, MAE, MAPE, Confusion Matrix,
-Precisão, Recall, Curva ROC, Curva Lift, AUC, Silhouette Score, DB-Index ).</li>
-													<li>Pacotes de Machine Learning: Sklearn e Scipy.</li>
-												</ul>
-											</div>
-										</article>
-										<article>
-											<span class="icon solid fa-rocket"></span>
-											<div class="content">
-												<h3>Visualização de Dados</h3>
-												<ul>
-													<li>Matplotlib, Seaborn, Plotly e Bokeh.</li>
-													<li>Power BI, Tableau, Metabase e Looker.</li>
-													</ul>
-											</div>
-										</article>
-										<article>
-											<span class="icon solid fa-signal"></span>
-											<div class="content">
-												<h3>Engenharia de Software</h3>
-												<ul>
-													<li>Git, Github, Gitlab, Cookiecutter, Virtual Environment e Docker.</li>
-													<li>Streamlit, Flask, Python API's.</li>
-													<li>Cloud Heroku, AWS Amazon, Google Cloud Platform ( GCP ) e Azure.</li>
-													</ul>
-											</div>
-										</article>
-									</div>
-								</section>
+          <!-- Habilidades -->
+          <section>
+            <header class="major">
+              <h2>Habilidades</h2>
+            </header>
+            <div class="features">
+              <article>
+                <span class="icon fa-gem"></span>
+                <div class="content">
+                  <h3>Linguagens & Banco de Dados</h3>
+                  <ul>
+                    <li>Python (análise de dados, automações, APIs).</li>
+                    <li>SQL (consultas, joins, CTEs, otimização).</li>
+                    <li>Banco de dados: PostgreSQL, MySQL, Oracle, MongoDB.</li>
+                  </ul>
+                </div>
+              </article>
+              <article>
+                <span class="icon solid fa-paper-plane"></span>
+                <div class="content">
+                  <h3>Estatística e Machine Learning</h3>
+                  <ul>
+                    <li>Estatística descritiva, inferencial e modelagem preditiva.</li>
+                    <li>Regressão, classificação, clusterização, validação cruzada.</li>
+                    <li>Sklearn, Scipy, métricas (RMSE, AUC, ROC, etc.).</li>
+                  </ul>
+                </div>
+              </article>
+              <article>
+                <span class="icon solid fa-rocket"></span>
+                <div class="content">
+                  <h3>Visualização de Dados</h3>
+                  <ul>
+                    <li>Power BI, Tableau, Metabase.</li>
+                    <li>Plotly, Matplotlib, Seaborn.</li>
+                  </ul>
+                </div>
+              </article>
+              <article>
+                <span class="icon solid fa-signal"></span>
+                <div class="content">
+                  <h3>Engenharia e Deploy</h3>
+                  <ul>
+                    <li>Git/GitHub, Docker, Streamlit, Flask.</li>
+                    <li>Cloud: AWS, Heroku, GCP.</li>
+                  </ul>
+                </div>
+              </article>
+            </div>
+          </section>
 
-								<!-- Content -->
-									<section>
-										<header class="main">
-											<h1>Experiências Profissionais</h1>
-										</header>
+          <!-- Projetos -->
+          <section>
+            <header class="major">
+              <h1>Projetos em Ciência de Dados</h1>
+            </header>
+            <div class="posts">
 
-										<!-- Content -->
-											<h2 id="content">4+ Projetos completos de Ciência de Dados</h2>
-											<p>Construção de soluções de dados para problemas de negócio, próximos dos desafios
-reais das empresas, utilizando dados públicos de competições de Ciência de Dados,
-onde eu abordei o problema desde a concepção do desafio de negócio até a
-publicação do algoritmo treinado em produção, utilizando ferramentas de Cloud
-Computing.</p>
-											<h2 id="content">3+ Anos como Analista de Indicadores e Orçamentos</h2>
-<p>Implemento e apoio a atualização e publicação de indicadores, incluindo painéis de monitoração e controle.
-Apoio a correlação de indicadores e a sua análise para detectar tendências e possíveis criticidades, sinalizando pontos de atenção.
-Auxilio aos gestores de áreas e donos de processos na definição de indicadores/relatórios e na sua geração para apoiar a gestão do desempenho.</p>
-										</section>
+              <!-- Projeto 1 -->
+              <article>
+                <a href="#" class="image"><img src="images/pic13.jpg" alt="Clusterização de Clientes" /></a>
+                <h3>Programa de Fidelidade com Clusterização</h3>
+                <p>Segmentação de clientes via K-Means e DBScan com objetivo de maximizar receita e personalizar ações de marketing. Resultado projetado: R$ 15 milhões/ano.</p>
+                <ul class="actions">
+                  <li><a href="#" class="button">Saiba Mais</a></li>
+                </ul>
+              </article>
 
-							<!-- Section -->
-								<section>
-									<header class="major">
-										<h1>Projetos em Ciência de Dados</h1>
-									</header>
-									<div class="posts">
-										<article>
-											<a href="#" class="image"><img src="images/pic13.jpg" alt="" /></a>
-											<h3>Construção de um programa de fidelidade com clusterização de
-clientes.</h3>
-											<p>Eu usei Python, Estatística e técnicas não-supervisionadas de Machine Learning para
-segmentar um grupo de clientes com base em suas características de performance de
-compra, a fim de selecionar grupos de clientes para formar um programa de Fidelidade
-com o objetivo de aumentar a receita da empresa. E o resultado dessa solução, caso
-fosse implementada, seria de R$ 15MM de dólares de receita anual.</p>
-											<h4>As ferramentas utilizadas foram:</h4>
-											<ul>
-											<li>Git, Gitlab e Github.</li>
-											<li>Python, Pandas, Matplotlib e Seaborn.</li>
-											<li>Jupyter Notebook.</li>
-											<li>K-Means, Hierarquical Clustering, DBScan.</li>
-											<li>AWS Cloud (EC2, S3, Postgres, SQLite).</li>
-											<li>Metabase Visualization.</li>
-										  </ul>
-											<ul class="actions">
-												<li><a href="#" class="button">Saiba Mais</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic14.jpg" alt="" /></a>
-											<h3>Identificação de imóveis para compra e revenda a fim de
-maximizar o lucro</h3>
-											<p>Identificação de imóveis abaixo do preço médio de venda e definição do preço ideal de
-revenda, a partir de uma análise exploratória de dados em Python.</p>
-											<h4>As ferramentas utilizadas foram:</h4>
-											<ul>
-											<li>Python, Pandas, Numpy e Seaborn.</li>
-											<li>Anaconda, Pycharm e Jupyter Notebook.</li>
-											<li>Mapas interativos com Plotly e Folium.</li>
-											<li>Heroku Cloud.</li>
-											<li>Streamlit Python framework web.</li>
-											</ul>
-											<ul class="actions">
-												<li><a href="#" class="button">Saiba Mais</a></li>
-											</ul>
-										</article>
-									</div>
-								</section>
+              <!-- Projeto 2 -->
+              <article>
+                <a href="#" class="image"><img src="images/pic14.jpg" alt="Imóveis para Revenda" /></a>
+                <h3>Identificação de Imóveis para Compra e Revenda</h3>
+                <p>Modelo de recomendação de imóveis com maior potencial de lucro com base em análise exploratória, mapas interativos e regressão de preços.</p>
+                <ul class="actions">
+                  <li><a href="#" class="button">Saiba Mais</a></li>
+                </ul>
+              </article>
 
-								<!-- Section -->
-									<section>
-										<header class="major">
-											<h2>Entre em Contato</h2>
-										</header>
-										<p>Sinta-se à vontade para entrar em contato.</p>
-										<ul class="contact">
-											<li class="icon solid fa-envelope"><a href="#">Claython.fabiano@hotmail.com</a></li>
-											<li class="icon brands fa-linkedin"><a href="www.linkedin.com/in/claython-cardoso-540878150">LinkedIn</a></li>
-											</ul>
-									</section>
+            </div>
+          </section>
 
+          <!-- Contato -->
+          <section>
+            <header class="major">
+              <h2>Entre em Contato</h2>
+            </header>
+            <p>Fique à vontade para me chamar por e-mail ou conectar via LinkedIn.</p>
+            <ul class="contact">
+              <li class="icon solid fa-envelope"><a href="mailto:Claython.fabiano@hotmail.com">Claython.fabiano@hotmail.com</a></li>
+              <li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/claython-cardoso-540878150" target="_blank">LinkedIn</a></li>
+            </ul>
+          </section>
 
+        </div>
+      </div>
+    </div>
 
-
-						</div>
-					</div>
-			</div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+  </body>
 </html>
