--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Portfólio de Ciência de Dados</title>
+  <title>Programa Insiders - Fidelização de Clientes</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="assets/css/main.css" />
@@ -10,24 +10,11 @@
   <div id="wrapper">
     <div id="main">
       <div class="inner">
-
         <header id="header">
-          <a href="index.html" class="logo"><strong>Portfólio</strong> de Ciência de Dados</a>
+          <a href="index.html" class="logo"><strong>Voltar ao Portfólio</strong></a>
         </header>
 
-        <section id="banner">
-          <div class="content">
-            <header>
-              <h1>Olá! Seja bem-vindo ao meu portfólio de<br /> projetos em Ciência de Dados.</h1>
-            </header>
-            <p>Sou <strong>Claython Cardoso</strong>, Analista Sênior de Inteligência de Mercado com sólida atuação no setor logístico-portuário. Tenho experiência em transformar dados em decisões estratégicas por meio de análise preditiva, visualização de dados, modelos estatísticos e indicadores de desempenho.</p>
-            <ul class="actions">
-              <li><a href="#insiders" class="button">Saiba Mais</a></li>
-            </ul>
-          </div>
-        </section>
-
-        <section id="insiders">
+        <section>
           <header class="main">
             <h1>Programa Insiders - Fidelização de Clientes</h1>
           </header>
@@ -87,9 +74,8 @@
           <h2>Conclusão</h2>
           <p>O programa Insiders foi estruturado com base em dados reais, resultando em segmentação inteligente de clientes e automação do processo de atualização. O modelo está preparado para operar em produção com ganhos comprovados de receita e engajamento.</p>
 
-          <p><a href="#banner" class="button">Voltar ao topo</a></p>
+          <p><a href="index.html" class="button">Voltar ao Portfólio</a></p>
         </section>
-
       </div>
     </div>
   </div>
