--- a/index.html
+++ b/index.html
@@ -1,83 +1,163 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
-<head>
-  <title>Programa Insiders - Fidelização de Clientes</title>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="assets/css/main.css" />
-</head>
-<body class="is-preload">
-  <div id="wrapper">
-    <div id="main">
-      <div class="inner">
-        <header id="header">
-          <a href="index.html" class="logo"><strong>Voltar ao Portfólio</strong></a>
-        </header>
+  <head>
+    <title>Portfólio de Ciência de Dados</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+  </head>
+  <body class="is-preload">
 
-        <section>
-          <header class="main">
-            <h1>Programa Insiders - Fidelização de Clientes</h1>
+    <!-- Wrapper -->
+    <div id="wrapper">
+
+      <!-- Main -->
+      <div id="main">
+        <div class="inner">
+
+          <!-- Header -->
+          <header id="header">
+            <a href="index.html" class="logo"><strong>Portfólio</strong> de Ciência de Dados</a>
+            <ul class="icons">
+              <li><a href="https://www.linkedin.com/in/claython-cardoso-540878150" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
+              <li><a href="mailto:Claython.fabiano@hotmail.com" class="icon solid fa-envelope"><span class="label">E-mail</span></a></li>
+            </ul>
           </header>
 
-          <p><strong>Contexto:</strong> A Mercury Store é uma empresa inglesa fictícia de outlet multimarcas que opera via e-commerce. Em pouco mais de 1 ano de operação, o time de marketing observou que alguns clientes contribuem de forma significativa para o faturamento da empresa.</p>
+          <!-- Banner -->
+          <section id="banner">
+            <div class="content">
+              <header>
+                <h1>Olá! Seja bem-vindo ao meu portfólio de<br /> projetos em Ciência de Dados.</h1>
+              </header>
+              <p>Sou <strong>Claython Cardoso</strong>, Analista Sênior de Inteligência de Mercado com sólida atuação no setor logístico-portuário.  
+              Tenho experiência em transformar dados em decisões estratégicas por meio de análise preditiva, visualização de dados, modelos estatísticos e indicadores de desempenho.</p>
+              <p>Este portfólio apresenta alguns projetos desenvolvidos com dados públicos e desafios reais, onde aplico técnicas de machine learning, estatística, SQL, Power BI e Python para resolver problemas de negócio de forma prática e escalável.</p>
+            </div>
+            <span class="image object">
+              <img src="images/pic12.jpg" alt="Dashboard" />
+            </span>
+          </section>
 
-          <p><strong>Desafio:</strong> Selecionar os clientes mais valiosos para integrar um programa de fidelidade personalizado, utilizando dados de compra e técnicas de Machine Learning.</p>
+          <!-- Sobre Mim -->
+          <section>
+            <header class="main">
+              <h1>Sobre Mim</h1>
+            </header>
+            <h2>Analista Sênior de Inteligência de Mercado na DP World Santos</h2>
+            <p>Graduado em Engenharia de Produção e Matemática, com MBA em Tecnologia para Negócios. Atualmente, atuo com inteligência de mercado na área de Pricing e Estratégia Comercial em uma das maiores operadoras portuárias do Brasil.</p>
+            <p>Minhas responsabilidades incluem:</p>
+            <ul>
+              <li>Construção e automação de dashboards em Power BI para suporte à tomada de decisão.</li>
+              <li>Análise e modelagem de dados para estruturação de indicadores operacionais e comerciais.</li>
+              <li>Estudos de pricing com base em dados históricos, concorrência e projeções de demanda.</li>
+              <li>Aplicação de técnicas quantitativas para entender tendências, sazonalidades e padrões de comportamento.</li>
+            </ul>
+            <p>Busco aplicar a Ciência de Dados de forma prática e acessível, sempre com foco em geração de valor ao negócio.</p>
+          </section>
 
-          <h2>Questões de negócio</h2>
-          <ul>
-            <li>Quem são os clientes elegíveis?</li>
-            <li>Quantos clientes farão parte do grupo?</li>
-            <li>Quais as características dos clientes Insiders?</li>
-            <li>Qual a expectativa de faturamento do grupo?</li>
-            <li>Como incluir ou remover clientes do programa?</li>
-          </ul>
+          <!-- Habilidades -->
+          <section>
+            <header class="major">
+              <h2>Habilidades</h2>
+            </header>
+            <div class="features">
+              <article>
+                <span class="icon fa-gem"></span>
+                <div class="content">
+                  <h3>Linguagens & Banco de Dados</h3>
+                  <ul>
+                    <li>Python (análise de dados, automações, APIs).</li>
+                    <li>SQL (consultas, joins, CTEs, otimização).</li>
+                    <li>Banco de dados: PostgreSQL, MySQL, Oracle, MongoDB.</li>
+                  </ul>
+                </div>
+              </article>
+              <article>
+                <span class="icon solid fa-paper-plane"></span>
+                <div class="content">
+                  <h3>Estatística e Machine Learning</h3>
+                  <ul>
+                    <li>Estatística descritiva, inferencial e modelagem preditiva.</li>
+                    <li>Regressão, classificação, clusterização, validação cruzada.</li>
+                    <li>Sklearn, Scipy, métricas (RMSE, AUC, ROC, etc.).</li>
+                  </ul>
+                </div>
+              </article>
+              <article>
+                <span class="icon solid fa-rocket"></span>
+                <div class="content">
+                  <h3>Visualização de Dados</h3>
+                  <ul>
+                    <li>Power BI, Tableau, Metabase.</li>
+                    <li>Plotly, Matplotlib, Seaborn.</li>
+                  </ul>
+                </div>
+              </article>
+              <article>
+                <span class="icon solid fa-signal"></span>
+                <div class="content">
+                  <h3>Engenharia e Deploy</h3>
+                  <ul>
+                    <li>Git/GitHub, Docker, Streamlit, Flask.</li>
+                    <li>Cloud: AWS, Heroku, GCP.</li>
+                  </ul>
+                </div>
+              </article>
+            </div>
+          </section>
 
-          <h2>Dados utilizados</h2>
-          <p>Faturas de vendas com as colunas: InvoiceNo, StockCode, Description, Quantity, InvoiceDate, UnitPrice, CustomerID, Country.</p>
+          <!-- Projetos -->
+          <section>
+            <header class="major">
+              <h1>Projetos em Ciência de Dados</h1>
+            </header>
+            <div class="posts">
 
-          <h2>Premissas adotadas</h2>
-          <ul>
-            <li>Clientes com devoluções frequentes foram excluídos.</li>
-            <li>Produtos com preço abaixo de £0,04 foram considerados brindes.</li>
-            <li>Códigos de taxas e postagem foram desconsiderados.</li>
-          </ul>
+              <!-- Projeto 1 -->
+              <article>
+                <a href="#" class="image"><img src="images/pic13.jpg" alt="Clusterização de Clientes" /></a>
+                <h3>Programa de Fidelidade com Clusterização</h3>
+                <p>Segmentação de clientes via K-Means e DBScan com objetivo de maximizar receita e personalizar ações de marketing. Resultado projetado: R$ 15 milhões/ano.</p>
+                <ul class="actions">
+                  <li><a href="#" class="button">Saiba Mais</a></li>
+                </ul>
+              </article>
 
-          <h2>Etapas da Solução</h2>
-          <ol>
-            <li><strong>Coleta e limpeza de dados:</strong> Kaggle + pandas.</li>
-            <li><strong>Feature engineering:</strong> criação de métricas de valor e frequência.</li>
-            <li><strong>Análise exploratória:</strong> uso de Pandas Profiling/YData Profiling.</li>
-            <li><strong>Modelagem:</strong> aplicação de UMAP, PCA, t-SNE para redução de dimensionalidade. Modelos: K-Means, GMM, HC, DBSCAN.</li>
-            <li><strong>Avaliação:</strong> métrica Silhouette Score.</li>
-            <li><strong>Resultado:</strong> escolha de 9 clusters com K-Means (score: 0.585).</li>
-          </ol>
+              <!-- Projeto 2 -->
+              <article>
+                <a href="#" class="image"><img src="images/pic14.jpg" alt="Imóveis para Revenda" /></a>
+                <h3>Identificação de Imóveis para Compra e Revenda</h3>
+                <p>Modelo de recomendação de imóveis com maior potencial de lucro com base em análise exploratória, mapas interativos e regressão de preços.</p>
+                <ul class="actions">
+                  <li><a href="#" class="button">Saiba Mais</a></li>
+                </ul>
+              </article>
 
-          <h2>Ferramentas Utilizadas</h2>
-          <ul>
-            <li>Python 3.8 (pandas, seaborn, matplotlib, sklearn)</li>
-            <li>Banco de dados: SQLite, PostgreSQL</li>
-            <li>Cloud AWS: EC2, RDS, S3</li>
-            <li>Power BI para visualização</li>
-          </ul>
+            </div>
+          </section>
 
-          <h2>Resultados de Negócio</h2>
-          <ul>
-            <li>Insiders representam 58,8% do volume de itens vendidos</li>
-            <li>Contribuem com 53,8% da receita total</li>
-            <li>Média de devoluções ligeiramente superior</li>
-            <li>Mediana de faturamento 781x maior que a base geral</li>
-          </ul>
+          <!-- Contato -->
+          <section>
+            <header class="major">
+              <h2>Entre em Contato</h2>
+            </header>
+            <p>Fique à vontade para me chamar por e-mail ou conectar via LinkedIn.</p>
+            <ul class="contact">
+              <li class="icon solid fa-envelope"><a href="mailto:Claython.fabiano@hotmail.com">Claython.fabiano@hotmail.com</a></li>
+              <li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/claython-cardoso-540878150" target="_blank">LinkedIn</a></li>
+            </ul>
+          </section>
 
-          <h2>Deploy</h2>
-          <p>Criação de pipeline com Amazon S3, Postgres (RDS), EC2 e agendamento de classificação de novos clientes. Dashboards interativos via Power BI Service.</p>
-
-          <h2>Conclusão</h2>
-          <p>O programa Insiders foi estruturado com base em dados reais, resultando em segmentação inteligente de clientes e automação do processo de atualização. O modelo está preparado para operar em produção com ganhos comprovados de receita e engajamento.</p>
-
-          <p><a href="index.html" class="button">Voltar ao Portfólio</a></p>
-        </section>
+        </div>
       </div>
     </div>
-  </div>
-</body>
+
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+  </body>
 </html>
